# new_cpp_project

./: .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  justfile  new_cpp_project.sublime-project  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
src/: CMakeLists.txt  benchmarks.cc  fixtures_location.h.in  unittests.cc
